Añadiendo el proyecto al repositorio
Esta es la linea base, ya que el proyecto lo empecé en one drive.

--- a/marines.html
+++ b/marines.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="vh-100 fondo_inicio">
+<body class="vh-100 fondo_marines">
 
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
@@ -68,30 +68,71 @@
 
     <main class="min-vh-100  p-4">
         <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
-            <h1 class="p-2">HISTORIA</h1>
+            <h1 class="p-2 text-center">MARINES</h1>
             <div class="row">
-                <div class="fs-2 col-12 col-lg-6  p-2">
+                <div class="col-md-6">
                     <p>
-                        One Piece es una serie de manga y anime creada por Eiichiro Oda en 1997.</p>
-                    <p> La historia
-                        sigue a Monkey D. Luffy, un joven con habilidades elásticas que se convierte en un pirata y
-                        busca el
-                        tesoro más grande del mundo
-                        conocido como "One Piece".
+                        Los Marines en One Piece son una organización militar que se encarga de mantener la paz y la
+                        seguridad en el mundo.
+                        Están formados por soldados altamente entrenados y dirigidos por altos oficiales, incluyendo al
+                        Almirante de la Flota y
+                        al Almirante de la Marina.
+                    </p>
+                    <p>
+                        Su objetivo principal es proteger a los civiles y combatir la piratería, lo que los pone en
+                        conflicto con los
+                        protagonistas, un grupo de piratas liderados por Monkey D. Luffy.
+                    </p>
+                    <p>
+                        A lo largo de la historia, los Marines se han enfrentado a numerosos enemigos y han participado
+                        en
+                        importantes eventos,
+                        como la Guerra en Marineford y la creación del Cipher Pol.
+                    </p>
+                    <p>
+                        Aunque su propósito es mantener la paz y la justicia, algunos miembros de los Marines son
+                        corruptos
+                        y abusan de su
+                        poder, lo que ha llevado a la creación de grupos como los Revolucionarios para luchar contra
+                        ellos.
                     </p>
                 </div>
+                <div class="col-md-6 ">
+                    <div id="controles_carrusel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/imagenes/slide_marines/garp.jpg" class="d-block w-100" alt="garp">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_marines/kizaru.jpg" class=" d-block w-100" alt="kizaru">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_marines/kobi.jpg" class="d-block w-100" alt="kobi">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
 
-                <div class=" col-12 col-lg-6  p-2">
-                    <img src="/imagenes/history.jpg" class="img-fluid" alt="...">
+                    </div>
+
                 </div>
 
 
             </div>
-
             <br>
-        </div>
-    </main>
 
+
+        </div>
+
+    </main>
 
 
     <script src="/bootstrap-5.3.0/js/bootstrap.bundle.js"></script>
