--- a/revolucionarios.html
+++ b/revolucionarios.html
@@ -11,8 +11,7 @@
 
 </head>
 
-<body class="vh-100 fondo_inicio">
-
+<body class="vh-100 fondo_revolucionarios">
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
         <nav class="navbar navbar-expand-md navbar-light bg-grey">
@@ -67,31 +66,75 @@
     </header>
 
     <main class="min-vh-100  p-4">
-        <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
-            <h1 class="p-2">HISTORIA</h1>
+        <div class="container-fluid col-12 p-4 bg-dark bg-opacity-75  text-white fs-2">
+            <h1 class="p-2 text-center  ">REVOLUCIONARIOS</h1>
             <div class="row">
-                <div class="fs-2 col-12 col-lg-6  p-2">
-                    <p>
-                        One Piece es una serie de manga y anime creada por Eiichiro Oda en 1997.</p>
-                    <p> La historia
-                        sigue a Monkey D. Luffy, un joven con habilidades elásticas que se convierte en un pirata y
-                        busca el
-                        tesoro más grande del mundo
-                        conocido como "One Piece".
+                <div class="col-md-6">
+                    <p>El Ejército Revolucionario en One Piece es una organización secreta que tiene como objetivo
+                        derrocar
+                        al Gobierno Mundial
+                        y cambiar el orden establecido en el mundo. Está liderada por Monkey D. Dragon, el padre del
+                        protagonista de la
+                        historia, Monkey D. Luffy.
                     </p>
-                </div>
 
-                <div class=" col-12 col-lg-6  p-2">
-                    <img src="/imagenes/history.jpg" class="img-fluid" alt="...">
+                    <p>
+                        El Ejército Revolucionario se compone de numerosos miembros, incluyendo a algunos personajes
+                        conocidos como Sabo, Koala
+                        y Bartholomew Kuma. Utilizan la tecnología avanzada y la fuerza militar para luchar contra los
+                        agentes del Gobierno
+                        Mundial y los Marines.
+                    </p>
+
+                    <p>El Ejército Revolucionario también busca proteger los derechos y la libertad de los ciudadanos
+                        del
+                        mundo, incluyendo a
+                        los marginados y oprimidos. Han llevado a cabo numerosas operaciones secretas en todo el mundo,
+                        como
+                        el rescate de
+                        esclavos y la liberación de prisioneros políticos.
+                    </p>
+
+
+
+                </div>
+                <div class="col-md-6 ">
+                    <div id="controles_carrusel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/imagenes/slide_revolucionarios/sabo.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_revolucionarios/ivankov.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_revolucionarios/koala.jpg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+
+                    </div>
+
                 </div>
 
 
             </div>
-
             <br>
+
+
+        </div>
+        <br>
         </div>
     </main>
-
 
 
     <script src="/bootstrap-5.3.0/js/bootstrap.bundle.js"></script>
