--- a/piratas.html
+++ b/piratas.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="vh-100 fondo_inicio">
+<body class="vh-100 fondo_piratas">
 
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
@@ -68,30 +68,71 @@
 
     <main class="min-vh-100  p-4">
         <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
-            <h1 class="p-2">HISTORIA</h1>
+            <h1 class="p-2 text-center">PIRATAS</h1>
             <div class="row">
-                <div class="fs-2 col-12 col-lg-6  p-2">
+                <div class="col-md-6">
                     <p>
-                        One Piece es una serie de manga y anime creada por Eiichiro Oda en 1997.</p>
-                    <p> La historia
-                        sigue a Monkey D. Luffy, un joven con habilidades elásticas que se convierte en un pirata y
-                        busca el
-                        tesoro más grande del mundo
-                        conocido como "One Piece".
+                        Los Piratas en One Piece son personajes que navegan por el mundo en busca de aventuras, riquezas
+                        y
+                        fama. Entre ellos se
+                        encuentra el protagonista de la historia, Monkey D. Luffy, quien busca convertirse en el Rey de
+                        los
+                        Piratas.
                     </p>
-                </div>
 
-                <div class=" col-12 col-lg-6  p-2">
-                    <img src="/imagenes/history.jpg" class="img-fluid" alt="...">
+                    <p>Los piratas en One Piece son muy diversos en términos de personalidades, habilidades y objetivos.
+                        Algunos son amables y
+                        ayudan a los demás, mientras que otros son malvados y disfrutan haciendo daño.
+                    </p>
+
+                    <p>Además, existen distintas categorías de piratas, como los Supernovas, un grupo de jóvenes piratas
+                        con habilidades
+                        sobrenaturales, y los Yonkou, cuatro de los piratas más poderosos del mundo.
+                    </p>
+
+                    <p>Los piratas en One Piece suelen enfrentarse a la Marina, una organización militar encargada de
+                        mantener la paz y la
+                        justicia en el mundo, lo que lleva a numerosos conflictos y batallas a lo largo de la historia.
+                    </p>
+
+
+                </div>
+                <div class="col-md-6 ">
+                    <div id="controles_carrusel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/imagenes/slide_piratas/big_mum.jpg" class="d-block w-100" alt="big mum">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_piratas/kaido.jpg" class="d-block w-100" alt="kaido">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/imagenes/slide_piratas/barbablanca.jpg" class="d-block w-100"
+                                    alt="barbablanca">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#controles_carrusel"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+
+                    </div>
+
                 </div>
 
 
             </div>
-
             <br>
+
+
         </div>
     </main>
-
 
 
     <script src="/bootstrap-5.3.0/js/bootstrap.bundle.js"></script>
