--- a/recuerda.html
+++ b/recuerda.html
@@ -8,11 +8,11 @@
     <link href="bootstrap-5.3.0/css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="w3data.js"></script>
+    <script src="recuerdame.js"></script>
 
 </head>
 
-<body class="vh-100 fondo_inicio">
-
+<body class="vh-100 fondo_recuerda">
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
         <nav class="navbar navbar-expand-md navbar-light bg-grey">
@@ -67,28 +67,37 @@
     </header>
 
     <main class="min-vh-100  p-4">
-        <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
-            <h1 class="p-2">HISTORIA</h1>
-            <div class="row">
-                <div class="fs-2 col-12 col-lg-6  p-2">
-                    <p>
-                        One Piece es una serie de manga y anime creada por Eiichiro Oda en 1997.</p>
-                    <p> La historia
-                        sigue a Monkey D. Luffy, un joven con habilidades elásticas que se convierte en un pirata y
-                        busca el
-                        tesoro más grande del mundo
-                        conocido como "One Piece".
-                    </p>
+        <div class="container-fluid w-75  p-4 bg-dark bg-opacity-75  text-white">
+            <h1 class="p-2">RECUERDA</h1>
+            <div class=" container-fluid p-2 ">
+
+                <div class=" row justify-content-md-center">
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="1" onclick=" pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="2" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="4" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="3" onclick="pareja(this);"></div>
                 </div>
-
-                <div class=" col-12 col-lg-6  p-2">
-                    <img src="/imagenes/history.jpg" class="img-fluid" alt="...">
+                <div class=" row justify-content-md-center">
+                    <div class="col-sm-4 col-md-2  oculto celda_recuerda" valor="3" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="0" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto  celda_recuerda" valor="2" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="1" onclick="pareja(this);"></div>
                 </div>
-
-
+                <div class=" row justify-content-md-center">
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="4" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="5" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="5" onclick="pareja(this);"></div>
+                    <div class="col-sm-4 col-md-2  oculto celda_recuerda" valor="0" onclick="pareja(this);"></div>
+                </div>
             </div>
-
             <br>
+            <form action="recuerda.html">
+
+                <div class="align-items-center text-center">
+                    <button id="reseteo" type="submit" class=" p-3 btn btn-dark">EMPEZAR DE NUEVO</button>
+                </div>
+            </form>
+
         </div>
     </main>
 
