Añado el apartado de peliculas a la pagina web y incoporo la estructura basica que tendra la pagina de trailers

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
                                 </ul>
                             </ul>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="peliculas.html">PELICULAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="trailers.html">TRAILERS</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <ul class="navbar-nav">
 
