--- a/trailers.html
+++ b/trailers.html
@@ -8,11 +8,12 @@
     <link href="bootstrap-5.3.0/css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="/bootstrap-5.3.0/js/bootstrap.bundle.js"></script>
-    <script src="recuerdame.js"></script>
+
 
 </head>
 
-<body class="vh-100 fondo_recuerda">
+<body class="vh-100 fondo_marines">
+
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
         <nav class="navbar navbar-expand-md navbar-light bg-grey">
@@ -72,40 +73,19 @@
     </header>
 
     <main class="min-vh-100  p-4">
-        <div class="container-fluid w-75  p-4 bg-dark bg-opacity-75  text-white">
-            <h1 class="p-2">RECUERDA</h1>
-            <div class=" container-fluid p-2 ">
+        <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
+            <h1 class="p-2 text-center">TRAILERS</h1>
+            <div class="row">
 
-                <div class=" row justify-content-md-center">
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="1" onclick=" pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="2" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="4" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="3" onclick="pareja(this);"></div>
-                </div>
-                <div class=" row justify-content-md-center">
-                    <div class="col-sm-4 col-md-2  oculto celda_recuerda" valor="3" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="0" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto  celda_recuerda" valor="2" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="1" onclick="pareja(this);"></div>
-                </div>
-                <div class=" row justify-content-md-center">
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="4" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="5" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2 oculto celda_recuerda" valor="5" onclick="pareja(this);"></div>
-                    <div class="col-sm-4 col-md-2  oculto celda_recuerda" valor="0" onclick="pareja(this);"></div>
-                </div>
+
+
             </div>
             <br>
-            <form action="recuerda.html">
 
-                <div class="align-items-center text-center">
-                    <button id="reseteo" type="submit" class=" p-3 btn btn-dark">EMPEZAR DE NUEVO</button>
-                </div>
-            </form>
 
         </div>
-    </main>
 
+    </main>
 
 
 </body>
