--- a/piratas.html
+++ b/piratas.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="peliculas.html">PELICULAS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="trailers.html">TRAILERS</a>
+                            <a class="nav-link" href="paginas_trailers/trailer0.html">TRAILERS</a>
                         </li>
                         <li class="nav-item dropdown">
                             <ul class="navbar-nav">
@@ -71,7 +71,6 @@
             </div>
         </nav>
     </header>
-
     <main class="min-vh-100  p-4">
         <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
             <h1 class="p-2 text-center">PIRATAS</h1>
