--- a/recuerda.html
+++ b/recuerda.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="peliculas.html">PELICULAS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="trailers.html">TRAILERS</a>
+                            <a class="nav-link" href="paginas_trailers/trailer0.html">TRAILERS</a>
                         </li>
                         <li class="nav-item dropdown">
                             <ul class="navbar-nav">
@@ -70,7 +70,6 @@
             </div>
         </nav>
     </header>
-
     <main class="min-vh-100  p-4">
         <div class="container-fluid w-75  p-4 bg-dark bg-opacity-75  text-white">
             <h1 class="p-2">RECUERDA</h1>
