Pequeña modificación (signos de puntuación) en dos paginas de trailers

--- a/paginas_trailers/trailer2.html
+++ b/paginas_trailers/trailer2.html
@@ -83,7 +83,7 @@
 
 
                 <div class="col-md-6">
-                    <p class="p-2 text-center">Al no tener trailer la serie presento el primer opening.
+                    <p class="p-2 text-center">Al no tener trailer la serie, presento el primer opening.
                     </p>
                 </div>
                 <div class="col-md-6">
