--- a/paginas_trailers/trailer3.html
+++ b/paginas_trailers/trailer3.html
@@ -83,7 +83,7 @@
 
 
                 <div class="col-md-6">
-                    <p class="p-2 text-center">Proximamente One Piece LIVE ACTION en Netflix
+                    <p class="p-2 text-center">Proximamente One Piece LIVE ACTION en Netflix.
                     </p>
                 </div>
                 <div class="col-md-6">
