Modificado la pagina trailer4

--- a/paginas_trailers/trailer4.html
+++ b/paginas_trailers/trailer4.html
@@ -83,7 +83,7 @@
 
                 <div class="col-md-6">
                     <p class="p-2 text-center">Un videojuego donde podras luchar en un batalla campal, eligiendo entre
-                        una multitud de personajes diferentes de la saga.
+                        una multitud de personajes diferentes.
                     </p>
                 </div>
                 <div class="col-md-6">
