--- a/paginas_trailers/trailer2.html
+++ b/paginas_trailers/trailer2.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 
-<body class="vh-100 fondo_marines">
+<body class="vh-100 fondo_trailers">
 
     <!-- Aqui ponemos los elementos del menu -->
     <header class="sticky-top" style="font-size: xx-large;">
