Añadiendo texto a los juegos

--- a/quieneres.html
+++ b/quieneres.html
@@ -72,8 +72,9 @@
         </nav>
     </header>
     <main class="min-vh-100  p-4">
-        <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white fs-2">
-            <h1 class="p-2">¿QUIEN ERES?</h1>
+        <div class="container-fluid col-10 p-4 bg-dark bg-opacity-75  text-white">
+            <h1 class="p-2 text-center">¿QUIEN ERES?</h1>
+            <p class="p-2  fs-4 text-decoration-underline">Rellena el cuestionario y averigua quien eres.</p>
             <div class="p-2  fs-4">
                 <form>
                     <div class="form-group">
