--- a/recuerda.html
+++ b/recuerda.html
@@ -10,6 +10,7 @@
     <script src="/bootstrap-5.3.0/js/bootstrap.bundle.js"></script>
     <script src="recuerdame.js"></script>
 
+
 </head>
 
 <body class="vh-100 fondo_recuerda">
@@ -73,6 +74,20 @@
     <main class="min-vh-100  p-4">
         <div class="container-fluid w-75  p-4 bg-dark bg-opacity-75  text-white">
             <h1 class="p-2">RECUERDA</h1>
+            <ul>
+                <li>
+                    Pincha en los cuadrados y intenta pinchar dos imagenes iguales.
+                </li>
+                <li>
+                    La meta es emparejar todas las imagenes.
+                </li>
+                <li>
+                    Es importante recordar las casillas ya pinchadas para poder emparejarlas.
+                </li>
+            </ul>
+            
+
+
             <div class=" container-fluid p-2 ">
 
                 <div class=" row justify-content-md-center">
